[tool.poetry]
name = "py-demo"
version = "0.1.0"
description = ""
authors = ["eziox <ezioxxk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.14"
langchain-mistralai = "^0.1.0"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.8.0"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
