[tool.poetry]
name = "py-cron"
version = "0.1.0"
description = ""
authors = ["eziox <ezioxxk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
schedule = "^1.2.2"
psycopg2-binary = "^2.9.9"
anthropic = "^0.29.0"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
